# project.netwatching.aggregator

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
src/: device.rs  devicehandler.rs  main.rs
src/api/: objects.rs
src/modules/: dummy.rs  mod.rs
