[package]
name = "netwatching-aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-runtime = {git = "https://github.com/netwatching/project.netwatching.runtime", branch = "feat/init"}
tokio = { version = "1.36.*", features = ["full"] }
crossbeam-channel = "0.5.*"
tracing-subscriber = "0.3.*"
log = "0.4.21"
rand = "0.9.0-alpha.0"